# PumpSystem

Include/: BusConnectionConfig.h  UARTConnectionConfig.h
MasterModule/: .mxproject  Makefile  MasterModule.ioc  Readme.md  compile_commands.json  platformio.ini
MasterModule/Core/Inc/: BusConnection.h  CANRuntime.h  Device.h  FIFO.h  UART.h  UARTRuntime.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
MasterModule/Core/Src/: BusConnection.c  CANRuntime.c  Device.c  FIFO.c  UART.c  UARTRuntime.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
MasterModule/PCB/Bus/BusModule/: BusModule.kicad_pcb  BusModule.kicad_prl  BusModule.kicad_pro  BusModule.kicad_sch
MasterModule/src/: main.cpp
Monitor/: CMakeLists.txt  Readme.md
Monitor/html/: index.html  script.js  style.css
Monitor/include/: GUI.hpp  Pump.hpp  PumpMonitor.hpp  UART.hpp
Monitor/src/: CMakeLists.txt  GUI.cpp  Pump.cpp  PumpMonitor.cpp  UART.cpp  main.cpp
PumpModule/: CMakeLists.txt  Readme.md
PumpModule/3DModel/: Assembly.a3d  Assembly.a3d.bak  BackMount.m3d  BackMount.m3d.bak  CarriageHolder.m3d  CarriageHolder.m3d.bak  CarriageSlider.m3d  CarriageSlider.m3d.bak  CyringeHolder.m3d  CyringeHolderSmall.m3d  EngineMount.m3d  EngineMount.m3d.bak  SpringeBackHolder.m3d  SpringeBackHolder.m3d.bak  Stoper.m3d  Stoper.m3d.bak  Switch.m3d  SyringeHolderHuge.m3d  SyringeHolderMedium.m3d  SyringeHolderSmall.m3d  carriage.m3d  carriage.m3d.bak  rail.m3d  ~$Switch.m3~  ~$ckMount.m3~  ~$gineMount.m3~  ~$rail.m3~  ~$ringeBackHolder.m3~  ~$ringeHolderMedium.m3~  ~$ringeHolderSmall.m3~  ~$rriage.m3~  ~$rriageHolder.m3~  ~$rriageSlider.m3~  ~$sembly.a3~
PumpModule/3DModel/ForPrinting/: BackMount.3mf  BackMount.stp  Carriage.3mf  Carriage.stp  CarriageHolder.3mf  CarriageHolder.stp  CarriageSlider.3mf  CarriageSlider.stp  EngineMount.3mf  EngineMount.stp  SpringeBackHolder.3mf  SpringeBackHolder.stp  Stoper.3mf  Stoper.stp  SyringeHolderHuge.3mf  SyringeHolderHuge.stp  SyringeHolderMedium.3mf  SyringeHolderMedium.stp  SyringeHolderSmall.3mf  SyringeHolderSmall.stp
PumpModule/3DModel/OpenSourseVersion/: README.txt
PumpModule/3DModel/OpenSourseVersion/files/: carriage.m3d  carriage.m3d.bak  handKnob7mm.3mf  ~$rriage.m3~
PumpModule/PCB/PumpModule/: MCP2515Module.kicad_sch  PowerUnit.kicad_sch  PumpModule.kicad_pcb  PumpModule.kicad_prl  PumpModule.kicad_pro  PumpModule.kicad_sch  PumpModuleSchemes.bak  PumpModuleSchemes.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
PumpModule/PCB/PumpModule.pretty/: DC-DC_Low.kicad_mod  MCP2515Mudule.kicad_mod
PumpModule/code/include/: BusConnection.hpp
PumpModule/code/src/: main.cpp
PumpModule/include/: BusConnection.hpp  Config.hpp  OperationBuffer.hpp  Rotation.hpp
PumpModule/src/: BusConnection.cpp  CMakeLists.txt  Core.cpp  Rotation.cpp
src/: main.cpp
